# funicular-up

./: LICENSE  README.md  pyproject.toml
project/project/: settings.py  urls.py
project/project/templates/: base.html
src/funicular_up/: admin.py  apps.py  models.py  urls.py  views.py
src/funicular_up/migrations/: 0001_initial.py  0002_alter_folder_options_folder_date_folder_description_and_more.py  0003_entry.py  0004_alter_entry_options_entry_position_and_more.py
src/funicular_up/static/funicular_up/js/: map_script.js
src/funicular_up/templates/funicular_up/: base_app.html  entry_detail.html  folder_create.html  folder_detail.html  folder_list.html  folder_list_date.html  folder_list_map.html  folder_update.html  folder_upload.html  search_results.html
src/funicular_up/templates/funicular_up/htmx/: entry_caption_update.html  entry_detail.html  entry_detail_anchor.html  entry_status.html  folder_create.html  folder_detail.html  folder_list.html  folder_list_date.html  folder_list_map.html  folder_sortable.html  folder_update.html  folder_upload.html  search_box.html  search_results.html
