[tool.black]
target-version = ['py312']

[tool.isort]
profile = "black"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "funicular-up"
version = "0.1.20"
authors = [
  { name="andywar65", email="andy.war1965@gmail.com" },
]
description = "A two part Django app for syncing files from cloud to local computer"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Operating System :: OS Independent",
    "Framework :: Django",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
    "django-tree-queries>=0.19.0",
    "django>=4.2.18",
    "django-leaflet>=0.31.0",
    "django-geojson>=4.1.0",
    "django-filer>=3.3.1",
    "djangorestframework>=3.15.2",
    "nh3>=0.2.20",
    "geopy>=2.4.1",
    "django-allauth>=65.4.1",
    "psycopg2-binary>=2.9.10",
]

[project.urls]
Repository = "https://github.com/andywar65/funicular-up"

[dependency-groups]
dev = [
    "coverage>=7.6.10",
    "dj-database-url>=2.3.0",
    "dj-email-url>=1.0.6",
    "environs>=14.1.0",
    "setuptools>=75.8.0",
]
